[package]
name = "metaheuristics-nature"
description = "A collection of nature-inspired meta-heuristic algorithms."
version = "4.1.0"
authors = ["KmolYuan <pyslvs@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/KmolYuan/metaheuristics-nature-rs"
keywords = ["metaheuristic", "algorithm", "optimization"]
categories = ["algorithms", "no-std"]

[features]
default = ["std"]
std = ["ndarray/std", "num-traits/std"]
rayon = ["std", "dep:rayon", "ndarray/rayon"]

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
ndarray = { version = "0.15", default-features = false }
rayon = { version = "1", optional = true }
getrandom = "0.2"
oorandom = "11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
