[package]
name = "metaheuristics-nature"
description = "A collection of nature-inspired meta-heuristic algorithms."
version = "8.0.3"
authors = ["KmolYuan <pyslvs@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/KmolYuan/metaheuristics-nature-rs"
keywords = ["metaheuristic", "algorithm", "optimization"]
categories = ["algorithms", "no-std"]

[features]
default = ["std"]
std = [
    "ndarray/std",
    "num-traits/std",
    "rand/std",
    "rand_chacha/std",
    "rand_distr/std",
    "serde?/std",
]
clap = ["std", "dep:clap"]
rayon = ["std", "dep:rayon", "ndarray/rayon"]
serde = ["dep:serde"]

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
rand_chacha = { version = "0.3", default-features = false }
rand_distr = { version = "0.4", default-features = false }
ndarray = { version = "0.15", default-features = false }
clap = { version = "4", features = ["derive"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
rayon = { version = "1", optional = true }

[dependencies.rand]
version = "0.8"
default-features = false
features = ["getrandom", "alloc"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
